Fixed spacing and included day of the week

--- a/static/Weather/Weather.css
+++ b/static/Weather/Weather.css
@@ -9,10 +9,14 @@
     width: fit-content;
     text-align: center;
 }
+.Weather H1 {
+    font-size: 40px;
+    margin: 0;
+}
 
 .Weather div {
     display: inline-block;
-    margin: 10px 0;
+    margin: 5px 0;
     width: fit-content;
 }
 
